--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "dist-es6/index.js",
   "jsnext:main": "dist-es6/index.js",
   "browser": "dist-umd/cnc-tskit.js",
-  "types": "dist/index.d.ts",
+  "types": "dist-cjs/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
