--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "browser": "dist-umd/cnc-tskit.js",
   "types": "dist-cjs/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' NODE_ENV=test node_modules/mocha/bin/mocha --require ts-node/register ./test/**/*.ts",
+    "clean": "rm -rf ./dist-cjs/* ./dist-es6/* ./dist-umd/*",
+    "build": "node_modules/rollup/dist/bin/rollup --c rollup.config.js"
   },
   "repository": {
     "type": "git",
@@ -24,10 +26,15 @@
   "license": "Apache-2.0",
   "homepage": "https://github.com/czcorpus/cnc-tskit#readme",
   "devDependencies": {
+    "@types/chai": "^4.2.8",
+    "@types/mocha": "^7.0.1",
+    "chai": "^4.2.0",
+    "mocha": "^7.0.1",
     "rollup": "^1.31.0",
     "rollup-plugin-typescript2": "^0.25.3",
     "rollup-plugin-uglify": "^6.0.4",
     "ts-loader": "^6.2.1",
+    "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   }
 }
