--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,9 @@
       "inlineSourceMap": true,
       "strictNullChecks": true
     },
-    "paths": {
-        "index": ["./index.ts"],
-        "collections": ["collections/index.ts"]
-    },
-    "files": ["src/index.ts", "src/collections/index.ts"]
+    "include": [
+        "./src/**/*",
+        "./test/**/*"
+    ],
+    "exclude": ["node_modules"]
   }
