--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cnc-tskit",
-  "version": "0.0.5",
+  "version": "0.0.7",
   "description": "Bunch of reusable TypeScript functions",
   "main": "dist-cjs/index.js",
   "module": "dist-es6/index.js",
@@ -8,7 +8,7 @@
   "browser": "dist-umd/cnc-tskit.js",
   "types": "dist-cjs/index.d.ts",
   "scripts": {
-    "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' NODE_ENV=test node_modules/mocha/bin/mocha --require ts-node/register ./test/**/*.ts",
+    "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' NODE_ENV=test node_modules/mocha/bin/mocha --require ts-node/register './test/**/*.ts'",
     "clean": "rm -rf ./dist-cjs/* ./dist-es6/* ./dist-umd/*",
     "build": "node_modules/rollup/dist/bin/rollup --c rollup.config.js"
   },
