--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "cnc-tskit",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Bunch of reusable TypeScript functions",
   "main": "dist-cjs/index.js",
-  "module": "dist-es6/src/index.js",
+  "module": "dist-es6/index.js",
   "jsnext:main": "dist-es6/src/index.js",
   "types": "dist-es6/src/index.d.ts",
   "browser": "dist-umd/cnc-tskit.js",
