--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cnc-tskit",
-  "version": "0.19.0",
-  "description": "Bunch of reusable TypeScript functions",
+  "version": "0.19.1",
+  "description": "Bunch of reusable & composable TypeScript functions",
   "main": "dist-cjs/index.js",
   "module": "dist-es6/index.js",
   "jsnext:main": "dist-es6/src/index.js",
