--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cnc-tskit",
-  "version": "0.21.0",
+  "version": "0.21.1",
   "description": "Bunch of reusable & composable TypeScript functions",
   "main": "dist-cjs/index.js",
   "module": "dist-es6/index.js",
@@ -8,7 +8,7 @@
   "types": "dist-es6/src/index.d.ts",
   "browser": "dist-umd/cnc-tskit.js",
   "scripts": {
-    "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' NODE_ENV=test node_modules/mocha/bin/mocha --require ts-node/register './test/**/*.ts'",
+    "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\", \"target\":\"es2018\"}' NODE_ENV=test node_modules/mocha/bin/mocha --require ts-node/register './test/**/*.ts'",
     "clean": "rm -rf ./dist-cjs/* ./dist-es6/* ./dist-umd/*",
     "build": "node_modules/rollup/dist/bin/rollup --c rollup.config.js"
   },
@@ -30,11 +30,11 @@
     "@types/mocha": "^7.0.2",
     "chai": "^4.2.0",
     "mocha": "^7.1.0",
-    "rollup": "^1.31.0",
-    "rollup-plugin-typescript2": "^0.26.0",
-    "rollup-plugin-uglify": "^6.0.4",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
-    "typescript": "^3.8.3"
+    "rollup": "^1.32.1",
+    "rollup-plugin-typescript2": "^0.27.2",
+    "rollup-plugin-terser": "^7.0.1",
+    "ts-loader": "^8.0.3",
+    "ts-node": "^9.0.0",
+    "typescript": "^3.8.4"
   }
 }
