--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "cnc-tskit",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "description": "Bunch of reusable & composable TypeScript functions",
   "main": "dist-cjs/index.js",
   "module": "dist-es6/index.js",
   "jsnext:main": "dist-es6/src/index.js",
-  "types": "dist-es6/src/index.d.ts",
+  "typings": "dist-es6/src/index.d.ts",
   "browser": "dist-umd/cnc-tskit.js",
   "scripts": {
     "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\", \"target\":\"es2018\"}' NODE_ENV=test node_modules/mocha/bin/mocha --require ts-node/register './test/**/*.ts'",
@@ -26,15 +26,16 @@
   "license": "Apache-2.0",
   "homepage": "https://github.com/czcorpus/cnc-tskit#readme",
   "devDependencies": {
-    "@types/chai": "^4.2.21",
+    "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
     "chai": "^4.3.4",
-    "mocha": "^9.1.0",
-    "rollup": "^2.56.3",
+    "esbuild": "^0.13.8",
+    "mocha": "^9.1.3",
+    "rollup": "^2.58.0",
+    "rollup-plugin-esbuild": "^4.6.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "ts-loader": "^9.2.5",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.3.5"
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.3.0",
+    "typescript": "^4.4.4"
   }
 }
