--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
         "./src/**/*",
         "./test/**/*"
     ],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "dist"]
   }
