--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist-cjs/index.js",
   "module": "dist-es6/index.js",
   "jsnext:main": "dist-es6/src/index.js",
-  "typings": "dist-es6/src/index.d.ts",
+  "types": "dist-es6/cnc-tskit.d.ts",
   "browser": "dist-umd/cnc-tskit.js",
   "scripts": {
     "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\", \"target\":\"es2018\"}' NODE_ENV=test node_modules/mocha/bin/mocha --require ts-node/register './test/**/*.ts'",
@@ -32,6 +32,7 @@
     "esbuild": "^0.13.8",
     "mocha": "^9.1.3",
     "rollup": "^2.58.0",
+    "rollup-plugin-dts": "^4.0.0",
     "rollup-plugin-esbuild": "^4.6.0",
     "rollup-plugin-terser": "^7.0.2",
     "ts-loader": "^9.2.6",
