--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cnc-tskit",
-  "version": "1.5.0",
+  "version": "1.6.0",
   "description": "Bunch of reusable & composable TypeScript functions",
   "main": "dist-cjs/index.js",
   "module": "dist-es6/index.js",
@@ -38,5 +38,8 @@
     "ts-loader": "^9.2.6",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
+  },
+  "peerDependencies": {
+    "rxjs": "^7.8.0"
   }
 }
