--- a/package.json
+++ b/package.json
@@ -1,14 +1,25 @@
 {
   "name": "cnc-tskit",
-  "version": "1.7.4",
+  "type": "module",
+  "version": "1.8.0",
   "description": "Bunch of reusable & composable TypeScript functions",
   "main": "dist-cjs/index.js",
   "module": "dist-es6/index.js",
   "jsnext:main": "dist-es6/src/index.js",
   "types": "dist-es6/cnc-tskit.d.ts",
   "browser": "dist-umd/cnc-tskit.js",
+  "exports": {
+    ".": {
+      "import": "./dist-es6/index.js",
+      "require": "./dist-cjs/index.js",
+      "types": "./dist-es6/cnc-tskit.d.ts"
+    }
+  },
+  "engines": {
+    "node": ">=16"
+  },
   "scripts": {
-    "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\", \"target\":\"es2018\"}' NODE_ENV=test node_modules/mocha/bin/mocha --require ts-node/register './test/**/*.ts'",
+    "test": "cross-env TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' NODE_ENV=test mocha",
     "clean": "rm -rf ./dist-cjs/* ./dist-es6/* ./dist-umd/*",
     "build": "node_modules/rollup/dist/bin/rollup --c rollup.config.js"
   },
@@ -26,20 +37,21 @@
   "license": "Apache-2.0",
   "homepage": "https://github.com/czcorpus/cnc-tskit#readme",
   "devDependencies": {
-    "@types/chai": "^4.2.22",
-    "@types/mocha": "^9.0.0",
-    "chai": "^4.3.4",
-    "esbuild": "^0.13.8",
-    "mocha": "^9.1.3",
-    "rollup": "^2.58.0",
-    "rollup-plugin-dts": "^4.0.0",
-    "rollup-plugin-esbuild": "^4.6.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "ts-loader": "^9.2.6",
-    "ts-node": "^10.3.0",
-    "typescript": "^4.4.4"
+    "@types/chai": "^5.0.1",
+    "@types/mocha": "^10.0.10",
+    "chai": "^5.1.2",
+    "cross-env": "^7.0.3",
+    "esbuild": "^0.24.2",
+    "mocha": "^11.0.1",
+    "rimraf": "^6.0.1",
+    "rollup": "^4.30.1",
+    "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-esbuild": "^6.1.1",
+    "@rollup/plugin-terser": "^0.4.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   },
   "peerDependencies": {
-    "rxjs": "^7.5.7"
+    "rxjs": "^7.8.1"
   }
 }
